--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "pages/*": ["src/pages/*"],
       "services/*": ["src/services/*"],
       "types/*": ["src/types/*"],
-      "utils/*": ["src/utils/*"]
+      "utils/*": ["src/utils/*"],
+      "constants/*": ["src/constants/*"]
     },
 
     /* Linting */
