[feat] : 로컬에서도 httms로 작동할 수 있도록 인증서 설치

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,7 @@ dist
 dist-ssr
 *.local
 .env
-
-.env
+*.pem
 
 # Editor directories and files
 .vscode/*
@@ -25,3 +24,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
