--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.25.1",
     "three": "^0.170.0",
+    "vite-plugin-mkcert": "^1.17.6",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
