[chore] : ast-types 라이브러리의 패키지를 수정함
- type 키워드를 붙여 import시 모듈이 아닌 type으로 임포팅 가능하도록 함
- 패키지 내용을 수정하고 적용함

--- a/package.json
+++ b/package.json
@@ -54,5 +54,10 @@
     "typescript": "^5.5.4",
     "vite": "^5.3.4",
     "vite-plugin-svgr": "^4.3.0"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "ast-types": "patches/ast-types.patch"
+    }
   }
 }
