--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "ast-types": "0.16.1",
     "autoprefixer": "^10.4.19",
     "chromatic": "^13.1.2",
     "eslint": "^8.57.0",
@@ -57,7 +58,7 @@
   },
   "pnpm": {
     "patchedDependencies": {
-      "ast-types": "patches/ast-types.patch"
+      "ast-types@0.16.1": "patches/ast-types.patch"
     }
   }
 }
