--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,14 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "types": ["vite/client"],
-
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
+    "types": [
+      "vite/client"
+    ],
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -12,23 +17,44 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-
     /* Path config */
     "baseUrl": ".",
     "paths": {
-      "assets/*": ["src/assets/*"],
-      "components/*": ["src/components/*"],
-      "hooks/*": ["src/hooks/*"],
-      "pages/*": ["src/pages/*"],
-      "services/*": ["src/services/*"],
-      "types/*": ["src/types/*"],
-      "utils/*": ["src/utils/*"],
-      "stores/*": ["src/stores/*"],
-      "constants/*": ["src/constants/*"]
+      "assets/*": [
+        "src/assets/*"
+      ],
+      "components/*": [
+        "src/components/*"
+      ],
+      "icons/*": [
+        "src/components/icons/*"
+      ],
+      "hooks/*": [
+        "src/hooks/*"
+      ],
+      "pages/*": [
+        "src/pages/*"
+      ],
+      "services/*": [
+        "src/services/*"
+      ],
+      "types/*": [
+        "src/types/*"
+      ],
+      "utils/*": [
+        "src/utils/*"
+      ],
+      "stores/*": [
+        "src/stores/*"
+      ],
+      "constants/*": [
+        "src/constants/*"
+      ]
     },
-
     /* Linting */
     "strict": true
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
