[fix] : 아이콘 props 타임 명시
- icons 스크립트 수행 시 타입스크립트 옵션을 붙여 각 props에 타입이 붙도록 함

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build:storybook": "storybook build",
-    "build:icons": "npx @svgr/cli ./src/assets/refactor/icons --out-dir ./src/components/icons --icon --replace-attr-values \"#303030=currentColor\" --no-prettier --ext tsx"
+    "build:icons": "npx @svgr/cli ./src/assets/refactor/icons --out-dir ./src/components/icons --icon --replace-attr-values \"#303030=currentColor\" --no-prettier --ext tsx --typescript"
   },
   "dependencies": {
     "@react-three/drei": "^9.117.3",
