--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -24,13 +24,18 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - uses: chromaui/action@latest
+      - name: Build Storybook
+        run: pnpm run build:storybook
+
+      - name: Publish to Chromatic
+        uses: chromaui/action@latest
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
           token: ${{ secrets.GITHUB_TOKEN }}
-          buildScriptName: build:storybook
+          onlyChanged: true
 
   message:
+    needs: chromatic
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
