[fix] : 스토리북 명령어 수정

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build:storybook": "storybook build",
+    "build-storybook": "storybook build",
     "build:icons": "npx @svgr/cli ./src/assets/refactor/icons --out-dir ./src/components/icons --icon --replace-attr-values \"#303030=currentColor\" --no-prettier --ext tsx --typescript"
   },
   "dependencies": {
