[chore] : 아이콘 생성 스크립트 수정
- 템플릿에 쓸데없는 import를 제거함
- 스트립트에적힌 옵션을 config.cjs 내부로 옮김
- 아이콘 색상이 전체 반영되도록 css 설정파일 수정

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "icons": "npx @svgr/cli ./src/assets/refactor/icons --out-dir ./src/components/icons --replace-attr-values \"#303030=currentColor\"--ignore-existing --typescript --index-template svgr-template.js",
+    "icons": "npx @svgr/cli ./src/assets/refactor/icons  --index-template svgr-template.cjs",
     "build-storybook": "storybook build"
   },
   "dependencies": {
