Change branch name from 'dev' to 'develop' in workflow

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -3,7 +3,7 @@ name: 'Chromatic Deployment'
 on:
   push:
     branches:
-      - dev
+      - develop
     paths:
       - 'src/stories/**'
       - '.storybook/**'      
