--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -3,10 +3,10 @@ name: 'Chromatic Deployment'
 on:
   push:
     branches:
-      - dev
+      - develop
     paths:
       - 'src/stories/**'
-      - '.storybook/**'      
+      - '.storybook/**'
 
 jobs:
   chromatic:
