--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -5,8 +5,7 @@ on:
     branches:
       - develop
     paths:
-      - 'src/stories/**'
-      - '.storybook/**'
+      - '**/*.storybook.**'
 
 jobs:
   chromatic:
